Delete NodeTraversal::traverseFunctionOutOfBand.
ReferenceCollector was the only caller, and that use can be expressed in terms of traverseAtScope.

#codehealth

PiperOrigin-RevId: 372169597