@@ -16,21 +16,16 @@
 
 package com.google.javascript.jscomp;
 
-import static com.google.common.base.Preconditions.checkNotNull;
-import static com.google.common.base.Preconditions.checkState;
 
 import com.google.common.base.Predicate;
 import com.google.common.base.Predicates;
-import com.google.common.collect.Iterables;
 import com.google.javascript.jscomp.NodeTraversal.ScopedCallback;
 import com.google.javascript.rhino.Node;
 import com.google.javascript.rhino.StaticSymbolTable;
-import java.util.ArrayList;
+import java.util.ArrayDeque;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
-import java.util.List;
 import java.util.Map;
-import java.util.Set;
 
 /**
  * A helper class for passes that want to access all information about where a variable is
@@ -49,10 +44,8 @@ public final class ReferenceCollector
   private final Map<Var, ReferenceCollection> referenceMap =
        new LinkedHashMap<>();
 
-  /**
-   * The stack of basic blocks and scopes the current traversal is in.
-   */
-  private List<BasicBlock> blockStack = new ArrayList<>();
+  /** The stack of basic blocks and scopes the current traversal is in. */
+  private ArrayDeque<BasicBlock> blockStack = new ArrayDeque<>();
 
   /**
    * Source of behavior at various points in the traversal.
@@ -73,12 +66,8 @@ public final class ReferenceCollector
 
   private final CollectorCallback callback = new CollectorCallback();
 
-  /**
-   * Traverse hoisted functions where they're referenced, not
-   * where they're declared.
-   */
-  private final Set<Var> startedFunctionTraverse = new HashSet<>();
-  private final Set<Var> finishedFunctionTraverse = new HashSet<>();
+  private final HashSet<Node> collectedHoistedFunctions = new HashSet<>();
+
   private Scope narrowScope;
 
   /** Constructor initializes block stack. */
@@ -123,11 +112,11 @@ public final class ReferenceCollector
     boolean shouldAddToBlockStack = !scope.isHoistScope();
     this.narrowScope = scope;
     if (shouldAddToBlockStack) {
-      blockStack.add(new BasicBlock(null, scope.getRootNode()));
+      blockStack.addLast(new BasicBlock(null, scope.getRootNode()));
     }
     this.createTraversalBuilder().traverseAtScope(scope);
     if (shouldAddToBlockStack) {
-      pop(blockStack);
+      blockStack.removeLast();
     }
     this.narrowScope = null;
   }
@@ -169,68 +158,53 @@ public final class ReferenceCollector
     return referenceMap.get(v);
   }
 
-  private void outOfBandTraversal(Var v) {
-    if (startedFunctionTraverse.contains(v)) {
+  private void maybeJumpToHoistedFunction(Var v, NodeTraversal t) {
+    Node fnNode = v.getParentNode();
+    if (fnNode == null
+        || !NodeUtil.isHoistedFunctionDeclaration(fnNode)
+        // If we're only traversing a narrow scope, do not try to climb outside.
+        || !(narrowScope == null || narrowScope.getDepth() <= v.getScope().getDepth())
+        || this.collectedHoistedFunctions.contains(fnNode)) {
       return;
     }
-    startedFunctionTraverse.add(v);
 
-    Node fnNode = v.getParentNode();
-
-    // Replace the block stack with a new one. This algorithm only works
-    // because we know hoisted functions cannot be inside loops. It will have to
-    // change if we ever do general function continuations.
-    checkState(NodeUtil.isHoistedFunctionDeclaration(fnNode), fnNode);
+    /**
+     * Replace the block stack with a new one matching the hoist position.
+     *
+     * <p>This algorithm only works because we know hoisted functions cannot be inside loops. It
+     * will have to change if we ever do general function continuations.
+     *
+     * <p>This is tricky to compute because of the weird traverseAtScope call for
+     * AggressiveInlineAliases.
+     */
+    ArrayDeque<BasicBlock> oldBlockStack = this.blockStack;
+    this.blockStack = new ArrayDeque<>();
 
     Scope containingScope = v.getScope();
-
-    // This is tricky to compute because of the weird traverseAtScope call for
-    // AggressiveInlineAliases.
-    List<BasicBlock> newBlockStack = null;
     if (containingScope.isGlobal()) {
-      newBlockStack = new ArrayList<>();
-      newBlockStack.add(blockStack.get(0));
+      this.blockStack.addLast(oldBlockStack.getFirst());
     } else {
-      for (int i = 0; i < blockStack.size(); i++) {
-        if (blockStack.get(i).getRoot() == containingScope.getRootNode()) {
-          newBlockStack = new ArrayList<>(blockStack.subList(0, i + 1));
+      for (BasicBlock b : oldBlockStack) {
+        this.blockStack.addLast(b);
+        if (b.getRoot() == containingScope.getRootNode()) {
+          break;
         }
       }
     }
-    checkNotNull(newBlockStack);
 
-    List<BasicBlock> oldBlockStack = blockStack;
-    blockStack = newBlockStack;
+    /**
+     * Record the function declaration reference explicitly because it is a bleeding name. The
+     * reference must be recorded with the containing scope, and traverseAtScope skips bleeding
+     * function NAME nodes
+     */
+    this.addReference(v, fnNode.getFirstChild(), t);
+    this.createTraversalBuilder()
+        .traverseAtScope(scopeCreator.createScope(fnNode, containingScope));
 
-    this.createTraversalBuilder().traverseFunctionOutOfBand(fnNode, containingScope);
-
-    blockStack = oldBlockStack;
-    finishedFunctionTraverse.add(v);
+    this.blockStack = oldBlockStack;
   }
 
   private final class CollectorCallback implements ScopedCallback {
-    /** Updates block stack and invokes any additional behavior. */
-    @Override
-    public void enterScope(NodeTraversal t) {
-      Node n = t.getScopeRoot();
-      BasicBlock parent = blockStack.isEmpty() ? null : peek(blockStack);
-      // Don't add all ES6 scope roots to blockStack, only those that are also scopes according to
-      // the ES5 scoping rules. Other nodes that ought to be considered the root of a BasicBlock
-      // are added in shouldTraverse() or processScope() and removed in visit().
-      if (t.isHoistScope()) {
-        blockStack.add(new BasicBlock(parent, n));
-      }
-    }
-
-    /** Updates block stack and invokes any additional behavior. */
-    @Override
-    public void exitScope(NodeTraversal t) {
-      if (t.isHoistScope()) {
-        pop(blockStack);
-      }
-      behavior.afterExitScope(t, new ReferenceMapWrapper(referenceMap));
-    }
-
     /** Updates block stack. */
     @Override
     public boolean shouldTraverse(NodeTraversal nodeTraversal, Node n, Node parent) {
@@ -240,21 +214,39 @@ public final class ReferenceCollector
       // TODO(nicksantos): Maybe generalize this to a continuation mechanism
       // like in RemoveUnusedCode.
       if (NodeUtil.isHoistedFunctionDeclaration(n)) {
-        Node nameNode = n.getFirstChild();
-        Var functionVar = nodeTraversal.getScope().getVar(nameNode.getString());
-        checkNotNull(functionVar);
-        if (finishedFunctionTraverse.contains(functionVar)) {
+        if (!collectedHoistedFunctions.add(n)) {
           return false;
         }
-        startedFunctionTraverse.add(functionVar);
       }
 
       // If node is a new basic block, put on basic block stack
       if (isBlockBoundary(n, parent)) {
-        blockStack.add(new BasicBlock(peek(blockStack), n));
+        blockStack.addLast(new BasicBlock(blockStack.getLast(), n));
       }
 
       return true;
+    }
+
+    /** Updates block stack and invokes any additional behavior. */
+    @Override
+    public void enterScope(NodeTraversal t) {
+      Node n = t.getScopeRoot();
+      BasicBlock parent = blockStack.isEmpty() ? null : blockStack.getLast();
+      // Don't add all ES6 scope roots to blockStack, only those that are also scopes according to
+      // the ES5 scoping rules. Other nodes that ought to be considered the root of a BasicBlock
+      // are added in shouldTraverse() or processScope() and removed in visit().
+      if (t.isHoistScope()) {
+        blockStack.addLast(new BasicBlock(parent, n));
+      }
+    }
+
+    /** Updates block stack and invokes any additional behavior. */
+    @Override
+    public void exitScope(NodeTraversal t) {
+      if (t.isHoistScope()) {
+        blockStack.removeLast();
+      }
+      behavior.afterExitScope(t, new ReferenceMapWrapper(referenceMap));
     }
 
     /** For each node, update the block stack and reference collection as appropriate. */
@@ -269,33 +261,18 @@ public final class ReferenceCollector
         }
 
         Var v = t.getScope().getVar(n.getString());
-
-        if (v != null) {
-          if (varFilter.apply(v)) {
-            addReference(v, new Reference(n, t, peek(blockStack)));
-          }
-
-          if (v.getParentNode() != null
-              && NodeUtil.isHoistedFunctionDeclaration(v.getParentNode())
-              // If we're only traversing a narrow scope, do not try to climb outside.
-              && (narrowScope == null || narrowScope.getDepth() <= v.getScope().getDepth())) {
-            outOfBandTraversal(v);
-          }
+        if (v == null) {
+          return;
         }
+
+        addReference(v, n, t);
+        maybeJumpToHoistedFunction(v, t);
       }
 
       if (isBlockBoundary(n, parent)) {
-        pop(blockStack);
+        blockStack.removeLast();
       }
     }
-  }
-
-  private static <T> T pop(List<T> list) {
-    return list.remove(list.size() - 1);
-  }
-
-  private static <T> T peek(List<T> list) {
-    return Iterables.getLast(list);
   }
 
   /**
@@ -344,13 +321,17 @@ public final class ReferenceCollector
     return n.isCase();
   }
 
-  private void addReference(Var v, Reference reference) {
+  private void addReference(Var v, Node n, NodeTraversal t) {
+    if (!this.varFilter.apply(v)) {
+      return;
+    }
+
     // Create collection if none already
-    ReferenceCollection referenceInfo =
+    ReferenceCollection collection =
         referenceMap.computeIfAbsent(v, k -> new ReferenceCollection());
 
     // Add this particular reference
-    referenceInfo.add(reference);
+    collection.add(new Reference(n, t, blockStack.getLast()));
   }
 
   static class ReferenceMapWrapper implements ReferenceMap {
